Closed Bug 896047 Opened 12 years ago Closed 12 years ago

crash in mozilla::dom::CanvasRenderingContext2D::EnsureWritablePath()

Categories

(Core :: Graphics: Canvas2D, defect)

x86
Windows 7
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla28
Tracking Status
firefox23 - ---
firefox24 - ---
firefox25 - ---
firefox28 - ---

People

(Reporter: yury, Assigned: yury)

References

()

Details

(Keywords: crash, testcase, Whiteboard: [shumway])

Crash Data

Attachments

(2 files)

Attached file test_case.html
This bug was filed from the Socorro interface and is report bp-f6096047-d846-4127-8b22-f98542130719 . ============================================================= Appears on DirectX due to fail at [1] and connected with EnsureUserSpacePath logic [2]. [1] http://mxr.mozilla.org/mozilla-central/source/gfx/2d/PathD2D.cpp#237 [2] http://hg.mozilla.org/releases/mozilla-release/annotate/e55e45536133/content/canvas/src/CanvasRenderingContext2D.cpp#l1875
OS: Windows NT → Windows 7
Keywords: testcase
Please renominate with a justification of why this should track, since this isn't marked as a topcrash or recent regression.
+cc: bas Can you take a quick look and advise?
Flags: needinfo?(bas)
(In reply to Alex Keybl [:akeybl] from comment #1) > Please renominate with a justification of why this should track, since this > isn't marked as a topcrash or recent regression. After landing Shumway it's number 45 in topcrashes for Firefox 27.
(In reply to Yury Delendik (:yury) from comment #3) > (In reply to Alex Keybl [:akeybl] from comment #1) > > Please renominate with a justification of why this should track, since this > > isn't marked as a topcrash or recent regression. > > After landing Shumway it's number 45 in topcrashes for Firefox 27. Up from what topcrash rank? Let's wait to see where this lands on Aurora before tracking.
Removing tracking flags - shumway won't move on from m-c for at least another couple of releases.
The fix is based on the "There is also never a path and a path builder present at the same time." constraint.
Attachment #829683 - Flags: review?(bas)
Comment on attachment 829683 [details] [diff] [review] Clear builder when fill rule for path changes. Review of attachment 829683 [details] [diff] [review]: ----------------------------------------------------------------- Good catch :).
Attachment #829683 - Flags: review?(bas) → review+
Keywords: checkin-needed
Assignee: nobody → ydelendik
Flags: in-testsuite+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Reproduced the crash on Nightly 2013-07-26. Verified fixed in 28.0a1 (2013-12-04), win 7 x64
Status: RESOLVED → VERIFIED
Flags: needinfo?(bas)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: