Bug 896047 - Clear builder when fill rule for path changes. r=Bas